cleaned up code for prod
